# singular

./: .gitignore  .travis.yml  CMakeLists.txt  Doxyfile.in  README.md
src/singular/: DiagonalMatrix.h  Exception.h  Matrix.h  Reflector.h  Rotator.h  Svd.h  Vector.h  singular.h.in  svd.h
test/: DiagonalMatrixTest.cpp  MatrixTest.cpp  ReflectorTest.cpp  RotatorTest.cpp  SvdTest.cpp  VectorTest.cpp  benchmark.cpp  matrix_test.cpp  reflector_test.cpp  rotator_test.cpp  svd_test.cpp  test.cpp  vector_test.cpp
